# SinfLab

./: CMakeLists.txt  README.md
p1/: README.MD
p1/src/: CMakeLists.txt  CryptMain.cpp  CryptMain.h
p2/src/: BitCommit.cpp  BitCommit.h  CMakeLists.txt  README
p3/src/: CMakeLists.txt  DvdCrypt.cpp  DvdCrypt.h  README
p4/src/: CMakeLists.txt
p4/src/prover/: CMakeLists.txt  Prover.cpp  Prover.h  README
p4/src/verifier/: CMakeLists.txt  README  Verifier.cpp  Verifier.h
p5/: CMakeLists.txt
p5/src/: CMakeLists.txt  Steg.cpp  Steg.h  histogram.gnuplot
p5MatLab/jpegtools/: getCoeffVector.m  getJsteg.m  jpeg_read.m
p5MatLab/wat_tools/: compute_mask.m  gaussgradient.m
resources/: Stegoimage.tif
